library-metasearch/src/form/SearchForm.css
.input-container {
  margin: 1em;
}

.input-container input {
  display: inline-block;
  padding: 0.5em;
  margin: 0.5em;
  font-size: 14pt;
}

.input-container input[type=text] {
  width: 70%;
}

.input-container input[type=submit] {
  padding: 0.5em 2em;
  cursor: pointer;
  text-transform: uppercase;
  outline: 1px solid #004bb4;
  border: 2px solid #fff;
  color: #fff;
  background: #004bb4;
}

@media all and (max-width: 900px) {
  .input-container input {
    display: block;
    margin: 0;
  }

  .input-container input[type=text] {
    width: 100%;
    margin-bottom: 0.5em;
  }
}

